<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/one_pupil_name"
            />

<TableRow>
    <Button
        android:layout_weight="1"
        android:layout_height="@dimen/button_main_menu"
        android:id="@+id/button_change_pupil"
        android:text="@string/change_pupil"
        />
    <Button
        android:layout_weight="1"
        android:layout_height="@dimen/button_main_menu"
        android:id="@+id/button_task_groups"
        android:text="@string/task_groups"
        />
</TableRow>
    <TableRow>
        <Button
            android:layout_weight="1"
            android:layout_height="@dimen/button_main_menu"
            android:id="@+id/button_results"
            android:text="@string/results"
            />
        <Button
            android:layout_weight="1"
            android:layout_height="@dimen/button_main_menu"
            android:id="@+id/button_tests"
            android:text="@string/tests"
            />
    </TableRow>

</TableLayout>