<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_height="@dimen/button_main_menu"
            android:text="@string/add_pupil"
            android:id="@+id/button_add_pupil"
            android:layout_width="0dp"></Button>

        <Button
            android:layout_weight="1"
            android:layout_height="@dimen/button_main_menu"
            android:text="@string/all_pupils"
            android:id="@+id/button_all_pupils"
            android:layout_width="0dp"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_height="@dimen/button_main_menu"
            android:text="@string/add_task"
            android:id="@+id/button_add_task_am"
            android:layout_width="0dp"></Button>

        <Button
            android:layout_weight="1"
            android:layout_height="@dimen/button_main_menu"
            android:text="wtf"
            android:id="@+id/button_add_task_am_2"
            android:layout_width="0dp"></Button>
    </LinearLayout>


</LinearLayout>